--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
 
   <header>
-    <h1>Key Differences Between Mobile Legends and League of Legends: Wild Rift</h1>
+    <h1>The Website Design Process with RofiTech: A Step-by-Step Guide</h1>
    </header>
   <main>
     
