--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content=" Discover the comprehensive process RofiTech follows for designing websites & Learn how they ensure your online presence">
 
  <meta name="robots" content="index,follow"> 
-  <link rel="canonical" href="https://company.netlify.app">
+  <link rel="canonical" href="https://rofitech.netlify.app">
  
  
   <style>
