--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
    </header>
   <main>
     
-<p>In an increasingly digital world, having a well-designed website is essential for any business aiming to succeed online. At <a href="https://www.rofitech.net/">RofiTech a leading web development company</a>, the process of designing a website is meticulously crafted to ensure that every client receives a product that not only meets their needs but also exceeds their expectations. This article will walk you through the detailed steps involved in the website design process at RofiTech, highlighting how they create tailored solutions to enhance your brand's online presence.</p>
+<p>In an increasingly digital world, having a well-designed website is essential for any business aiming to succeed online. At <a href="https://rofitech.net/">RofiTech a leading web development company</a>, the process of designing a website is meticulously crafted to ensure that every client receives a product that not only meets their needs but also exceeds their expectations. This article will walk you through the detailed steps involved in the website design process at RofiTech, highlighting how they create tailored solutions to enhance your brand's online presence.</p>
 
     
 <div style="text-align: center;">
